--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,29 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+.popup {
+	    display: none; /* Inicialmente escondido */
+	    position: absolute; /* Posiciona o popup em relação à imagem */
+	    top: 0;
+	    left: 0;
+	    width: 200px; /* Largura do popup igual à da imagem */
+	    background-color: rgba(0, 0, 0, 0.8); /* Fundo escuro semi-transparente */
+	    color: white; /* Cor do texto */
+	    text-align: center; /* Centraliza o texto */
+	    padding: 10px; /* Espaçamento interno */
+	    z-index: 10; /* Garante que o popup fique acima das imagens */
+}
 
-html, body, div, span, applet, object, h1, h2, h3, h4, h5, h6, p, blockquote,
+.image-container:hover .popup {
+    display: block; /* Mostra o popup ao passar o mouse sobre o contêiner da imagem */
+}
+.image-container {
+    position: relative; /* Necessário para o posicionamento do popup */
+}
+
+
+html, body, div, span, applet, object,
+iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
@@ -23,7 +44,6 @@ section, summary, time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;}
-}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -83,7 +103,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #333333;
+		background-color: #E2DFD2; 
 		background-image: url("images/bg02.png");
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -165,7 +185,7 @@ input, select, textarea {
 		margin-bottom: 1em;
 		text-align: justify;
 	}
- 
+
 /* Row */
 
 	.row {
@@ -409,7 +429,7 @@ input, select, textarea {
 					padding-top: 100px;
 				}
 
-		@media screen and (min-width: 737px) {
+		@media screen and (min-width: 880px) {
 
 			.row {
 				display: flex;
@@ -899,7 +919,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (min-width: 737px) and (max-width: 1200px) {
+		@media screen and (min-width: 880px) and (max-width: 1200px) {
 
 			.row {
 				display: flex;
@@ -1144,7 +1164,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (min-width: 737px) and (max-width: 1000px) {
+		@media screen and (min-width: 880px) and (max-width: 1000px) {
 
 			.row {
 				display: flex;
@@ -1389,8 +1409,11 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 736px) {
-
+		@media screen and (max-width: 880px) {
+			
+		    #sidebar2 {
+		        display: none;
+		    }
 			.row {
 				display: flex;
 				flex-wrap: wrap;
@@ -1661,7 +1684,7 @@ input, select, textarea {
 
 		table tfoot {
 			border-top: solid 1px #ddd;
-			background: #2c2c2c;
+			background: #eee;
 		}
 
 /* Form */
@@ -1737,30 +1760,41 @@ input, select, textarea {
 
 /* Image */
 
-/* painel 123123  */
-		.image-gallery {
-            display: flex;
-            justify-content: left; /* Centraliza as imagens */
-            flex-wrap: wrap; /* Permite que as imagens se movam para a próxima linha se necessário */
-            gap: 1px; /* Espaçamento entre as imagens */
-            padding: 2px;
-        }
-        .image-gallery img {
-            height: auto; /* Mantém a proporção da imagem */
-            border-radius: 5px; /* Arredonda os cantos das imagens */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adiciona sombra */
-            transition: transform 0.3s;
-        }
-        .image-gallery img:hover {
-            transform: scale(1.2); /* Aumenta ligeiramente a imagem ao passar o mouse */
-        }
-        figcaption {
-            font-size: 14px;
-            color: #555;
-        }
-        figure {
-            width: 600px; /* Garante que o tamanho das imagens e das legendas se alinhem */
-        }
+	.image {
+		display: inline-block;
+	}
+
+		.image img {
+			display: block;
+			width: 100%;
+		}
+
+		.image.fit {
+			display: block;
+			width: 100%;
+		}
+
+		.image.featured {
+			display: block;
+			width: 100%;
+			margin: 0 0 2em 0;
+		}
+
+		.image.left {
+			float: left;
+			margin: 0 2em 2em 0;
+		}
+
+		.image.centered {
+			display: block;
+			margin: 0 0 2em 0;
+		}
+
+			.image.centered img {
+				margin: 0 auto;
+				width: auto;
+			}
+
 /* Button */
 
 	input[type="button"],
@@ -2323,11 +2357,10 @@ input, select, textarea {
 /* Content */
 
 	#content {
-		width: auto; 
-		display: inline-block; /* Ajusta o tamanho do container ao conteúdo */
 		position: relative;
 		background-color: #eae2b7;
 		background-image: url("images/bg02.png");
+		width: 100%;
 		-moz-flex-grow: 1;
 		-webkit-flex-grow: 1;
 		-ms-flex-grow: 1;
@@ -2339,9 +2372,6 @@ input, select, textarea {
 	}
 
 		#content > .inner {
-
-			width: auto; 
-			display: inline-block;
 			position: relative;
 			z-index: 1;
 		}
@@ -2377,7 +2407,41 @@ input, select, textarea {
 
 /* Desktop */
 
-	@media screen and (min-width: 737px) {
+	@media screen and (min-width: 880px) {
+		#sidebar2 {
+			    position: fixed;
+			    right: 0;
+			    top: 0;
+			    width: 24%;
+			    height: calc(100% - 20px);
+			    background-color: #f0f2f5; /* Cor de fundo do menu */
+			    border-left: 1px solid #ccc; /* Linha à esquerda do menu */
+			    padding: 20px;
+			    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); 
+			    overflow-y: auto; 
+			    margin-bottom: 10px; 
+			}
+			#sidebar2 img {
+				object-fit: cover;
+			    width: 90%;
+			    height: auto;
+			    display: block;
+			    margin: 0 auto;
+			    margin: 20px auto 0;
+			    max-height: none;
+			}
+			#sidebar2 h1 {
+				padding-left: 20px;
+			}
+			.image:hover {
+			    transform: scale(1.07); /* Aumenta a imagem levemente no hover */
+			    filter: brightness(1.3); /* Aumenta o brilho da imagem no hover */
+			}
+		}
+	@media screen and (min-width: 880px) and (max-width: 937px){
+		#content {width: auto;}
+	}		
+	@media screen and (min-width: 880px) {
 
 		/* Basic */
 
@@ -2512,14 +2576,10 @@ input, select, textarea {
 		/* Content */
 
 			#content {
-				box-shadow: 0 0 0.25em 0em rgba(1, 0, 0, 0.25);
-				222px
+				box-shadow: 0 0 0.25em 0em rgba(0, 0, 0, 0.25);
 			}
 
 				#content > .inner {
-
-					width: auto; 
-					display: inline-block;
 
 					/*
 								This sets an upper limit on your page content to prevent it
@@ -2528,8 +2588,7 @@ input, select, textarea {
 								whatever you like (or remove it entirely).
 							*/
 
-					max-width: 1000px;
-
+					max-width: 67%;
 				}
 
 		/* Copyright */
@@ -2548,12 +2607,13 @@ input, select, textarea {
 					height: 0.5em;
 					margin: 0 0 2em 0;
 				}
+
 	}
 
 /* Wide */
 
 	@media screen and (min-width: 1201px) {
-
+			
 		/* Basic */
 
 			body {
@@ -2583,7 +2643,7 @@ input, select, textarea {
 					position: relative;
 					top: -0.65em;
 					margin-bottom: -0.65em;
-					text-align: justify;
+
 				}
 
 			.box.post .info {
@@ -2657,18 +2717,16 @@ input, select, textarea {
 		/* Content */
 
 			#content {
-
-				width: auto; 
-				display: inline-block;
 				padding: 3em 5em 8em 5em;
 				margin-left: 7em;
 			}
 
 	}
 
+
 /* Narrow */
 
-	@media screen and (min-width: 737px) and (max-width: 1200px) {
+	@media screen and (min-width: 880px) and (max-width: 1200px) {
 
 		/* Basic */
 
@@ -2699,7 +2757,6 @@ input, select, textarea {
 					position: relative;
 					top: -0.75em;
 					margin-bottom: -0.75em;
-					text-align: justify;
 				}
 
 			.box.post .info {
@@ -2742,59 +2799,14 @@ input, select, textarea {
 
 			#content {
 				padding: 2em 3em 6em 3em;
-
-				width: auto; 
-				display: inline-block;
 			}
 
 	}
 
-/* Narrower */
-
-	@media screen and (min-width: 737px) and (max-width: 1000px) {
-
-		/* Basic */
-
-			body {
-				min-width: 641px;
-				font-size: 14pt;
-			}
-
-			input, textarea, select {
-				font-size: 14pt;
-			}
-
-		/* Logo */
-
-			#logo {
-				display: none;
-			}
-
-		/* Nav */
-
-			#nav {
-				margin-top: 0 !important;
-			}
-
-				#nav:before {
-					display: none !important;
-				}
-
-				#nav li:hover a {
-					background: none;
-				}
-
-		/* Sidebar */
-
-			#sidebar {
-				padding: 30px 20px 30px 20px;
-			}
-
-	}
 
 /* Mobile */
 
-	@media screen and (max-width: 736px) {
+	@media screen and (max-width: 880px) {
 
 		/* Basic */
 
@@ -2845,7 +2857,6 @@ input, select, textarea {
 					font-size: 1em;
 					font-family: 'Source Sans Pro', sans-serif;
 					line-height: 1.5em;
-					text-align: justify;
 				}
 
 				.box.post .info {
@@ -2918,9 +2929,6 @@ input, select, textarea {
 			#content {
 				margin-top: 44px;
 				padding: 3em 20px 2em 20px;
-
-				width: auto; 
-				display: inline-block;
 			}
 
 		/* Sidebar */
@@ -2974,9 +2982,6 @@ input, select, textarea {
 				margin-left: 0;
 				margin-right: 0;
 				min-height: 0 !important;
-
-				width: auto; 
-				display: inline-block;
 			}
 
 		/* Sidebar */
@@ -3012,9 +3017,6 @@ input, select, textarea {
 				-webkit-transform: translateX(14em);
 				-ms-transform: translateX(14em);
 				transform: translateX(14em);
-
-				width: auto; 
-				display: inline-block;
 			}
 
 			body.sidebar-visible #sidebar {
